[gd_scene load_steps=8 format=2]

[ext_resource path="res://Level/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/Edge.tscn" type="PackedScene" id=4]
[ext_resource path="res://Level/Level.gd" type="Script" id=5]
[ext_resource path="res://Assets/Xolonium-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 8 )

[node name="Level" type="Node2D"]
script = ExtResource( 5 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 1026, 212 )
monitorable = false

[node name="CanvasLayer" parent="." instance=ExtResource( 1 )]

[node name="Edge" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 600 )
scale = Vector2( 1, 50 )

[node name="Edge2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1918, 600 )
scale = Vector2( 1, 50 )

[node name="Edge3" parent="." instance=ExtResource( 4 )]
position = Vector2( 965, 988 )
scale = Vector2( 100, 1 )

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Points_Label" type="Label" parent="HUD"]
anchor_right = 1.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Points"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Life_Container" type="HBoxContainer" parent="HUD/VBoxContainer"]
margin_right = 40.0

[node name="Time_Left" type="Label" parent="HUD/VBoxContainer"]
margin_top = 4.0
margin_right = 40.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 2 )
text = "0"

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
